# video_sport_intect

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
data/busStation/: temporalROI.txt
include/: base_detectors.h  detectors.h  evaluation.h  postprocess.h  ui_viewer.h  utils.h
include/algorithms/: bg_subtractor.h  frame_diff.h  hybrid_fusion.h  optical_flow.h
include/core/: base_detector.h  config.h
src/: evaluation.cpp  postprocess.cpp  ui_viewer.cpp  utils.cpp
src/algorithms/: bg_subtractor.cpp  frame_diff.cpp  hybrid_fusion.cpp  optical_flow.cpp
